perubahan input data

--- a/nbproject/private/configs/ebakoerp.properties
+++ b/nbproject/private/configs/ebakoerp.properties
@@ -1,5 +1,5 @@
-remote.connection=ebakoerp-a49f24
-remote.directory=/html/etos
+remote.connection=ebako_77-4eba85
+remote.directory=/etos
 remote.upload=MANUALLY
 run.as=REMOTE
 url=http://localhost/ebako/etos/
